[package]
name = "dpc-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http2"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6", features = ["catch-panic", "trace", "sensitive-headers"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = { version = "0.33", features = ["use-serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
geotiff = "0.1"
proj4rs = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
