[package]
name = "dpc-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
tower = { version = "0.5.3" }
tower-http = { version = "0.6", features = ["catch-panic", "trace", "sensitive-headers"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls", "gzip"] }
geo = { version = "0.33", features = ["use-serde"] }
geotiff = "0.1"
proj4rs = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
